Fix line breaking in Buy shares block on mobile (15)

--- a/src/scss/_dao.scss
+++ b/src/scss/_dao.scss
@@ -271,6 +271,12 @@
     }
 }
 
+@media only screen and (max-width: 680px) {
+    .shares-block {
+        flex-wrap: wrap;
+    }
+}
+
 @media only screen and (max-width: 650px) {
     .buy-shares-content {
         
